# futureagent

./: Dockerfile  README.md  railway.toml  start.py
app/: __init__.py  main.py
app/api/routes/: alerts.py  analysis.py  backtest.py  health.py  news.py  performance.py  positions.py  stream.py
app/core/: config.py
app/db/: database.py
app/services/agents/: orchestrator.py  sentiment_agent.py  technical_agent.py  trailing_stop_agent.py
app/services/analysis/: backtest.py
app/services/anomaly/: detector.py
app/services/binance/: client.py
app/services/llm/: service.py
app/services/memory/: market_memory.py
app/services/news/: news_agent.py
app/tasks/: scheduler.py
frontend_static/: index.html
futuragents/: pyproject.toml
futuragents/app/: main.py
futuragents/app/api/routes/: auth.py  market.py  signals.py
futuragents/app/core/: config.py
futuragents/app/services/agents/: risk_agent.py  technical_agent.py
futuragents/frontend_static/: index.html
